Fix padding on collapsed grantees

--- a/db/cms_fixtures/la2050/layouts/la2050/stylesheet.css
+++ b/db/cms_fixtures/la2050/layouts/la2050/stylesheet.css
@@ -673,7 +673,7 @@ ul.linenav {
 }
 
 .minigrantees.row [class*="col-"] {
-  margin-bottom:5em;
+  margin-bottom:3em;
   height:533px;
 }
 
